test/negative/705_tuple_size_mismatch.err
705_tuple_size_mismatch.fx:2:5: error: improper type of the tuple pattern
705_tuple_size_mismatch.fx:3:9: error: the appropriate match for 'a' of type '<unknown>' is not found.

2 errors occured during type checking.
